// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns "None" when the trade does not have a fee recipient 1`] = `None`;

exports[`returns a fee recipient link when the trade does not have a relayer but does have a fee recipient 1`] = `
.c0 {
  color: #3f4ac3;
  cursor: pointer;
}

.c0:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  class="c0"
  href="/search?q=0x004e344251110fa1cb09aa31c95c6598ed07dce6"
>
  Unknown
</a>
`;

exports[`returns relayer link when trade has a relayer 1`] = `
.c0 {
  color: #3f4ac3;
  cursor: pointer;
}

.c0:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<a
  class="c0 c1"
  href="/relayers/google"
>
  Google
</a>
`;
